<resources>
    <string name="app_name">Silat.in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Register</string>

    <!--String register-->
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="alamat">Alamat</string>
    <string name="nomorhp">Nomor Handphone</string>\
    <string name="checkbox">I Agree to Term and Conditons</string>

</resources>
